[fe] Fix scrolling issues in several views
With the switch to general use of flex layout the overflow behaviour on
several components broke. This fixes the issues and displays scrollbars
when necessary. When using a tab-panel only the body scrolls and the
header stays visible.

--- a/frontend/src/app/sys-check/sys-check.component.css
+++ b/frontend/src/app/sys-check/sys-check.component.css
@@ -1,3 +1,7 @@
+:host {
+  overflow: auto;
+}
+
 .header {
   justify-content: center;
   align-items: center;
